--- a/code/js/.gitlab-ci.yml
+++ b/code/js/.gitlab-ci.yml
@@ -1,33 +1,34 @@
-variables:
-  SONAR_HOST: https://sonarqube-dev.tramontina.cloud
-  SONAR_PROJECT_KEY: # <===== insirá a chave do projeto do sonarqube aqui
+# variables:
+#   SONAR_HOST: https://sonarqube-dev.tramontina.cloud
+#   SONAR_PROJECT_KEY: # <===== insirá a chave do projeto do sonarqube aqui
 
-stages:
-  - test
-  - quality
+# stages:
+#   - test
+#   - quality
 
-test-job:
-  stage: test
-  image: node:20
-  cache:
-    key: coverage-cache-$CI_COMMIT_SHORT_SHA
-    paths:
-      - coverage/
-  script:
-    - yarn
-    - yarn test
-  tags:
-    - treinamento    
+# test-job:
+#   stage: test
+#   image: node:20
+#   cache:
+#     key: coverage-cache-$CI_COMMIT_SHORT_SHA
+#     paths:
+#       - coverage/
+#   script:
+#     - yarn
+#     - yarn test
+#   tags:
+#     - treinamento    
 
-sonarqube-job:
-  stage: quality
-  image: sonarsource/sonar-scanner-cli:5.0
-  cache:
-    key: coverage-cache-$CI_COMMIT_SHORT_SHA
-    paths:
-      - coverage/
-  script:
-    # TODO: Adicione o restante dos parâmetros aqui, ou no arquivo sonar-project.properties
-    - sonar-scanner -Dsonar.token="$SONAR_TOKEN" -Dsonar.projectKey="$SONAR_PROJECT_KEY" -Dsonar.host.url="$SONAR_HOST"
-  tags:
-    - treinamento
+# sonarqube-job:
+#   stage: quality
+#   image: sonarsource/sonar-scanner-cli:5.0
+#   cache:
+#     key: coverage-cache-$CI_COMMIT_SHORT_SHA
+#     paths:
+#       - coverage/
+#   script:
+#     # TODO: Adicione o restante dos parâmetros aqui, ou no arquivo sonar-project.properties
+#     #- sonar-scanner -Dsonar.token="$SONAR_TOKEN" -Dsonar.projectKey="$SONAR_PROJECT_KEY" -Dsonar.host.url="$SONAR_HOST"
+#     - echo "Executar o scanner"
+#   tags:
+#     - treinamento
